# nwiro-acp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  STRUCTURE.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: MODEL-COMPATIBILITY.md  MODEL-SETUP.md  MODEL-TEST-PLAN.md  PERF-BASELINE.md  RUNNING.md
scripts/: _bleed_oracle.py  _mcp_responder.py  aggregate-day-results.py  drive-chat.py  drive-overflow.py  model-matrix.py  models.toml  perf-harness.py  reasoning-robustness-check.py  repro-overflow.py  run-day1.py  smoke-test-arg-coercion.py  smoke-test-model-switch.py  smoke-test-streaming.py  smoke-test-tool-call-events.py  smoke-test.py  tool-curve.py  verify-gap5.sh
src/: error.rs  main.rs  model_family.rs  persist.rs  vision.rs
src/acp/: frame.rs  golden.rs  messages.rs  mod.rs  server.rs  translator.rs
src/acp/snapshots/: local_llm_acp__acp__golden__golden_cancel_during_tool.snap  local_llm_acp__acp__golden__golden_chat_basic.snap  local_llm_acp__acp__golden__golden_chat_with_reasoning.snap  local_llm_acp__acp__golden__golden_circuit_breaker.snap  local_llm_acp__acp__golden__golden_drainer_panic_recovery.snap  local_llm_acp__acp__golden__golden_initialize.snap  local_llm_acp__acp__golden__golden_tool_emulated_inline_json.snap  local_llm_acp__acp__golden__golden_tool_emulated_qwen_xml.snap  local_llm_acp__acp__golden__golden_tool_native_single.snap
src/bridge/: emulated_parser.rs  mod.rs  tools.rs
src/connector/: capabilities.rs  error.rs  event.rs  fs.rs  local_openai.rs  mcp.rs  mod.rs  path.rs  runtime.rs  sender.rs  session.rs  submission.rs
src/openai/: client.rs  messages.rs  mod.rs  stream.rs
